@@ -3787,6 +3787,14 @@ default: 1000
 The time in milliseconds that is waited for a mapped key in case of already
 typed key sequence is ambiguous.
 .TP
+.BI 'title'
+type: boolean
+.br
+default: true when title can be restored, false otherwise
+.br
+When enabled title of the terminal or terminal multiplexer's window is updated
+according to current location.
+.TP
 .BI 'trash'
 type: boolean
 .br
