@@ -1,6 +1,6 @@
 " vifm syntax file
 " Maintainer:  xaizek <xaizek@openmailbox.org>
-" Last Change: December 28, 2015
+" Last Change: January 04, 2015
 " Based On:    Vim syntax file by Dr. Charles E. Campbell, Jr.
 
 if exists('b:current_syntax')
@@ -121,24 +121,25 @@ syntax keyword vifmOption contained aproposprg autochpos cdpath cd chaselinks
 		\ laststatus lines locateprg ls lsview mintimeoutlen number nu numberwidth
 		\ nuw relativenumber rnu rulerformat ruf runexec scrollbind scb scrolloff so
 		\ sort sortgroups sortorder sortnumbers shell sh shortmess shm slowfs
-		\ smartcase scs statusline stl syscalls tabstop timefmt timeoutlen tm trash
-		\ trashdir ts tuioptions to undolevels ul vicmd viewcolumns vifminfo vimhelp
-		\ vixcmd wildmenu wmnu wordchars wrap wrapscan ws
+		\ smartcase scs statusline stl syscalls tabstop timefmt timeoutlen title tm
+		\ trash trashdir ts tuioptions to undolevels ul vicmd viewcolumns vifminfo
+		\ vimhelp vixcmd wildmenu wmnu wordchars wrap wrapscan ws
 
 " Disabled boolean options
 syntax keyword vifmOption contained noautochpos noconfirm nocf nochaselinks
 		\ nofastrun nofollowlinks nohlsearch nohls noiec noignorecase noic
 		\ noincsearch nois nolaststatus nols nolsview nonumber nonu norelativenumber
 		\ nornu noscrollbind noscb norunexec nosmartcase noscs nosortnumbers
-		\ nosyscalls notrash novimhelp nowildmenu nowmnu nowrap nowrapscan nows
+		\ nosyscalls notitle notrash novimhelp nowildmenu nowmnu nowrap nowrapscan
+		\ nows
 
 " Inverted boolean options
 syntax keyword vifmOption contained invautochpos invconfirm invcf invchaselinks
 		\ invfastrun invfollowlinks invhlsearch invhls inviec invignorecase invic
 		\ invincsearch invis invlaststatus invls invlsview invnumber invnu
 		\ invrelativenumber invrnu invscrollbind invscb invrunexec invsmartcase
-		\ invscs invsortnumbers invsyscalls invtrash invvimhelp invwildmenu invwmnu
-		\ invwrap invwrapscan invws
+		\ invscs invsortnumbers invsyscalls invtitle invtrash invvimhelp invwildmenu
+		\ invwmnu invwrap invwrapscan invws
 
 " Expressions
 syntax region vifmStatement start='^\(\s\|:\)*'
