@@ -166,6 +166,9 @@ typedef struct config_t
 	/* Per line pattern for borders. */
 	char *border_filler;
 
+	/* Whether terminal title should be updated or not. */
+	int set_title;
+
 	/* Whether directory path should always be resolved to real path (all symbolic
 	 * link expanded). */
 	int chase_links;
