@@ -1400,7 +1400,7 @@ ui_view_title_update(FileView *view)
 	title = format_view_title(view,
 			cfg.shorten_title_paths ? &replace_home_part : &path_identity);
 
-	if(view == selected)
+	if(view == selected && cfg.set_title)
 	{
 		set_term_title(title);
 	}
