@@ -2,6 +2,10 @@
 
 	Added summary to builtin tree implementation.  Thanks to aleksejrs.
 
+	Added 'title' option to control whether title of terminal should be set.
+	Enabled by default if old title can be restored.  Thanks to Svyatoslav
+	Mishyn (a.k.a. juef).
+
 	Case insensitive completion of autocommand name for :autocmd command.
 
 	Fixed reopening controlling terminal across users.  Thanks to aleksejrs.
